--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ autopages:
   tags:
     layouts: 
       - 'tag.html'
-    title: 'The Barber Theme'
+    # title: 'Catatan Sakti'
     permalink: '/tag/:tag'
     slugify:
       mode: raw
