--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ google_analytics:
 name: Sakti Buana
 title: Catatan Sakti
 description: >
-  Barber is a blog theme for Jekyll built by Thomas Vaeth for Samesies using HTML, Sass, and JavaScript.
+  Catatan Sakti adalah sebuah blog berisikan kesaktian yang diraih oleh seseorang bernama Sakti.
 url: http://saktibuana.github.io
 twitter_username: saktibuana
 default_img: /assets/images/seo.jpg
